Finished header and lead-section

--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@ and open the template in the editor.
     </head>
     <body>
         <!--header start-->
-        <header class="py-2 py-lg-3 fixed-top">
+        <header class="py-2 py-lg-4 fixed-top">
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-md navbar-light px-0">
                     <!--logo start-->
                     <a class="navbar-brand" href="#">
-                        <img src="img/logo.png" alt=""/>
+                        <!--<img src="img/logo.png" alt=""/>-->
+                        <h1 class="text-white">TrustIT</h1>
                     </a><!--logo end-->
                     <!--Hamburger button-->
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,31 +87,50 @@ and open the template in the editor.
         </header><!--header end-->
         <!--main start-->
         <main>
+            <!--lead slider start-->
             <section class="lead-slider-wrapper">
                 <ul class="owl-carousel list-unstyled lead-slider">
-                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url(img/lead.jpg)">
+                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.35), rgba(0,0,0,0.35)), url(img/slide-web-softver.jpg)">
                         <div class="container">
-                            <h2 class="text-center text-white animation" data-animation="zoom">
-                                Skewed1 is a <span class="text-warning">slightly wonky</span> landing page template
-                            </h2>
+                            <p class="text-center text-white">TrustIT Company</p>
+                            <h2 class="text-center text-white text-uppercase animation" data-animation="zoom">web development</h2>
+                            <h3 class="text-center text-white animation" data-animation="zoom">
+                                TrustIT is a <span class="text-warning">slightly wonky</span> landing page template
+                            </h3> 
+                            <div class="lead-slider-links text-center">
+                                <a href="#" class="btn-slider">saznaj više</a>
+                                <a href="#" class="btn-slider">kontakt</a>
+                            </div>
                         </div>
                     </li>
-                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url(img/about.jpg)">
+                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.35), rgba(0,0,0,0.35)), url(img/slide-web-softver.jpg)">
                         <div class="container">
-                            <h2 class="text-center text-white">
-                                Skewed2 is a <span class="text-warning">slightly wonky</span> landing page template
-                            </h2>
+                            <p class="text-center text-white">TrustIT Company</p>
+                            <h2 class="text-center text-white text-uppercase">web development</h2>
+                            <h3 class="text-center text-white animation" data-animation="zoom">
+                                TrustIT is a <span class="text-warning">slightly wonky</span> landing page template
+                            </h3> 
+                            <div class="lead-slider-links text-center">
+                                <a href="#" class="btn-slider">saznaj više</a>
+                                <a href="#" class="btn-slider">kontakt</a>
+                            </div>
                         </div>
                     </li>
-                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url(img/paralax.jpg)">
+                    <li class="hello position-relative" style="background-image:linear-gradient(to right, rgba(0,0,0,0.35), rgba(0,0,0,0.35)), url(img/slide-web-softver.jpg)">
                         <div class="container">
-                            <h2 class="text-center text-white">
-                                Skewed3 is a <span class="text-warning">slightly wonky</span> landing page template
-                            </h2>
+                            <p class="text-center text-white">TrustIT Company</p>
+                            <h2 class="text-center text-white text-uppercase">web development</h2>
+                            <h3 class="text-center text-white animation" data-animation="zoom">
+                                TrustIT is a <span class="text-warning">slightly wonky</span> landing page template
+                            </h3> 
+                            <div class="lead-slider-links text-center">
+                                <a href="#" class="btn-slider">saznaj više</a>
+                                <a href="#" class="btn-slider">kontakt</a>
+                            </div>
                         </div>
                     </li>
                 </ul>
-            </section>
+            </section><!--lead slider end-->
         </main><!--main end-->
         <!--footer start-->
         <footer>
