--- a/index.html
+++ b/index.html
@@ -133,8 +133,85 @@ and open the template in the editor.
             </section><!--lead slider end-->
         </main><!--main end-->
         <!--footer start-->
-        <footer>
+        <footer class="container-fluid">
+            <section class="footer-section position-relative">
+                <div class="row">
+                    <div class="col-md-12 footer-logo">
+                        <!--<img class="img-responsive margin-auto" src="/assets/img/logo-bottom.png" alt="Quantox Logo Bottom">-->
+                        <h1 class="text-white text-center">TrustIT</h1>
+                    </div>
+                    <div class="col-md-12 text-center footer-navigation my-3">
+                        <ul>
+                            <li>
+                                <a href="#">početna</a>
+                            </li>
+                            <li>
+                                <a href="#">o nama</a>
+                            </li>
+                            <li>
+                                <a href="#">delatnost</a>
+                            </li>
+                            <li>
+                                <a href="#">brošure</a>
+                            </li>
+                            <li>
+                                <a href="#">galerija</a>
+                            </li>
+                            <li>
+                                <a href="#">reference</a>
+                            </li>
+                            <li>
+                                <a href="#">kontakt</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-12 social-icons my-3">
+                        <ul class="text-center list-unstyled">
+                            <li>
+                                <a href="https://www.facebook.com/PIS-Poslovni-Informacioni-Sistemi-419822691493357/" class="fa fa-facebook"></a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/QuantoxCom" class="fa fa-twitter"></a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/company/pis---poslovno-informacioni-sistemi-d.o.o." class="fa fa-linkedin"></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-12 text-center mt-4 mb-2">
+                        <div class="text-white">Copyright 2019 © TrustIT</div>
+                    </div>
+                </div>
+                <div class="cover">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6 mb-2 mb-md-0 px-0">
+                                <article class="cover-article d-flex align-items-center px-2">
+                                    <div class="w-30">
+                                        <a href="#" class="fa fa-map-o text-white d-block"></a>
+                                    </div>
+                                    <div class="w-70">
+                                        <p class="text-white mb-0">TrustIT</p>
+                                        <a href="#" class="cover-link text-white d-block">Pronađite nas na mapi</a>
+                                    </div>
+                                </article>
+                            </div>
+                            <div class="col-md-6 px-0">
+                                <article class="cover-article1 d-flex align-items-center px-2">
+                                    <div class="w-30">
+                                        <a href="#" class="fa fa-envelope text-white d-block"></a>
+                                    </div>
+                                    <div class="w-70">
+                                        <p class="text-white mb-0">TrustIT</p>
+                                        <a href="#" class="cover-link text-white d-block">Pošaljite nam E-mail</a>
+                                    </div>
+                                </article>
+                            </div>
+                        </div>
+                    </div>
 
+                </div>
+            </section>
         </footer><!--footer end-->
 
         <!--SCRIPTS goes here-->
