Finished partners-slider section

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@ and open the template in the editor.
                     <div class="collapse navbar-collapse" id="main-menu">
                         <ul class="navbar-nav ml-auto mt-2">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">početna <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="#home">početna <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">o nama</a>
+                                <a class="nav-link" href="#about-us">o nama</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">delatnost</a>
@@ -78,7 +78,7 @@ and open the template in the editor.
                                 <a class="nav-link" href="#">reference</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">kontakt</a>
+                                <a class="nav-link" href="#contact">kontakt</a>
                             </li>
                         </ul>
                     </div><!--navbar end-->
@@ -131,6 +131,122 @@ and open the template in the editor.
                     </li>
                 </ul>
             </section><!--lead slider end-->
+            <!--partners section start-->
+            <section class="partners">
+                <div class="container">
+                    <div class="partners-tittle position-relative border-top-linear-gradient">
+                        <h2 class="text-uppercase text-left mb-0">
+                            partneri
+                        </h2>
+                    </div>
+                    <!--SLIDER START-->
+                    <ul class="partners-slider list-unstyled owl-carousel">
+                        <li data-category='#C41FC4'>
+                            <div class="slider-item text-left bg-white">
+                                <a href="#">
+                                    <img src="img/partners/aet_logo.jpg" alt="AET" class="img-partners"/>
+                                </a>
+                                <h6 class="mb-0 lineBefore line-left">
+                                    Kompanija PIS d.o.o. je distributer holandske kompanije AET 
+                                    za izdavanje međunarodno priznatih digitalih sertifikata.
+                                </h6> 
+                            </div>
+                        </li>
+                        <li data-category='#C41FC4'>
+                            <div class="slider-item text-left bg-white">
+                                <a href="#">
+                                    <img src="img/partners/partneri-Gemalto.jpg" alt="Gemalto" class="img-partners"/>
+                                </a>
+                                <h6 class="mb-0 lineBefore line-left">
+                                    Gemalto je svetski lider i najveći proizvođač kartica u 
+                                    Smart Card industriji. PIS d.o.o. je sertifikovani developer, 
+                                    integrator i distributer za Gemalto proizvode. Gemalto je 
+                                    prodao preko 1.000.000.000 smart kartica u 2013. godini.
+                                </h6>
+                            </div>
+                        </li>
+                        <li data-category='#C41FC4'>
+                            <div class="slider-item text-left bg-white">
+                                <a href="#">
+                                    <img src="img/partners/EDC_logo-300x38.png" alt="Datacard" class="img-partners"/>
+                                </a>
+                                <h6 class="mb-0 lineBefore line-left">
+                                    Kompanija PIS d.o.o. je zvanični distributer i partner američke 
+                                    korporacije Entrust Datacard, svetskog lidera u delatnosti izdavanja 
+                                    i izrade identifikacionih kartica. U širokom asortimanu imamo 
+                                    Datacard štampače kartica, softverska rešenja, kompletan repromaterijal, 
+                                    usluge održavanja, servisa i štampanja kartica.
+                                </h6>
+                            </div>
+                        </li>
+                        <li data-category='#C41FC4'>
+                            <div class="slider-item text-left bg-white">
+                                <a href="#">
+                                    <img src="img/partners/partneri-Kodak.jpg" alt="Kodak" class="img-partners"/>
+                                </a>
+                                <h6 class="mb-0 lineBefore line-left">
+                                    Kompanija PIS d.o.o. je jedini sertifikovani distributer za 
+                                    Kodak Document Imagining program na tržištima Srbije i Crne Gore. 
+                                    Kodak je svetski lider za masovnu obradu podataka i dokumenata 
+                                    sa preko 65% svetskog tržišnog udela.
+                                </h6>
+                            </div>
+                        </li>
+                        <li data-category='#C41FC4'>
+                            <div class="slider-item text-left bg-white">
+                                <a href="#">
+                                    <img src="img/partners/partneri-ATIZ.jpg" alt="Atiz" class="img-partners"/>
+                                </a>
+                                <h6 class="mb-0 lineBefore line-left">
+                                    BookSnap i BookDrive su skeneri knjiga do A2 formata firme ATIZ, 
+                                    a za kratko vreme su postali svetski hit za digitalizaciju arhivske 
+                                    građe biblioteka, opština, javnih ustanova, itd. PIS d.o.o. je od 2007. 
+                                    godine zastupnik za firmu ATIZ.
+                                </h6>
+                            </div>
+                        </li>
+                        <li data-category='#C41FC4'>
+                            <div class="slider-item text-left bg-white">
+                                <a href="#">
+                                    <img src="img/partners/Zebra_tech_logo15-300x102.png" alt="Zebra" class="img-partners"/>
+                                </a>
+                                <h6 class="mb-0 lineBefore line-left">
+                                    Zebra je tržišni lider u bar-kod i card printer oblasti. 
+                                    Kompanija PIS d.o.o. je Gold partner za Zebra opremu i repromaterijal.
+                                </h6>
+                            </div>
+                        </li>
+                        <li data-category='#C41FC4'>
+                            <div class="slider-item text-left bg-white">
+                                <a href="#">
+                                    <img src="img/partners/OpenText-Logo-239x70.jpg" alt="OpenText" class="img-partners"/>
+                                </a>
+                                <h6 class="mb-0 lineBefore line-left">
+                                    OpenText je najveća svetska kompanija za Document Management i 
+                                    Workflow rešenja. Open Text Capture je trižišni lider i de facto 
+                                    standard za capture application software, OCR i ICR prepoznavanje 
+                                    podataka (naloga, čekova, specifikacija čekova, faktura, itd.), 
+                                    povezanost uređaja i obradu skeniranih slika. PIS d.o.o. je distributer 
+                                    rešenja za OpenText i sertifikovani solution provajder za OpenText Capture.
+                                </h6>
+                            </div>
+                        </li>
+                        <li data-category='#C41FC4'>
+                            <div class="slider-item text-left bg-white">
+                                <a href="#">
+                                    <img src="img/partners/arhiviraj.png" alt="Arhiviraj" class="img-partners"/>
+                                </a>
+                                <h6 class="mb-0 lineBefore line-left">
+                                    ARHIVIRAJ.COM™ je outsourcing centar kompanije 
+                                    Poslovni Informacioni Sistemi – PIS d.o.o, u 
+                                    kojem se pružaju najsavremenije usluge skeniranja, 
+                                    mikrofilmovanja i arhiviranja dokumentacije.
+                                </h6>
+                            </div>
+                        </li>
+                    </ul><!--SLIDER END--> 
+                </div>
+            </section><!--partners section end-->
         </main><!--main end-->
         <!--footer start-->
         <footer class="container-fluid">
