--- a/index.html
+++ b/index.html
@@ -146,9 +146,18 @@ and open the template in the editor.
                                 <a href="#">
                                     <img src="img/partners/aet_logo.jpg" alt="AET" class="img-partners"/>
                                 </a>
-                                <h6 class="mb-0 lineBefore line-left">
-                                    Kompanija PIS d.o.o. je distributer holandske kompanije AET 
-                                    za izdavanje međunarodno priznatih digitalih sertifikata.
+                                <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="Kompanija PIS d.o.o. je distributer holandske kompanije 
+                                    AET za izdavanje međunarodno priznatih digitalih sertifikata, 
+                                    koja omogućava da se na PDF dokumenta doda međunarodni elektronski 
+                                    potpis, jednako verodostojan kao i ručno potpisan papirni dokument. 
+                                    Saradnja firmi AET i PIS omogućava da visokobezbednosni proizvodi 
+                                    AET-a budu dostupni i na domaćem tržištu.">
+                                    Kompanija PIS d.o.o. je distributer holandske kompanije 
+                                    AET za izdavanje međunarodno priznatih digitalih sertifikata, 
+                                    koja omogućava da se na PDF dokumenta doda međunarodni elektronski 
+                                    potpis, jednako verodostojan kao i ručno potpisan papirni dokument. 
+                                    Saradnja firmi AET i PIS omogućava da visokobezbednosni proizvodi 
+                                    AET-a budu dostupni i na domaćem tržištu.
                                 </h6> 
                             </div>
                         </li>
@@ -157,7 +166,10 @@ and open the template in the editor.
                                 <a href="#">
                                     <img src="img/partners/partneri-Gemalto.jpg" alt="Gemalto" class="img-partners"/>
                                 </a>
-                                <h6 class="mb-0 lineBefore line-left">
+                                <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="Gemalto je svetski lider i najveći proizvođač kartica u 
+                                    Smart Card industriji. PIS d.o.o. je sertifikovani developer, 
+                                    integrator i distributer za Gemalto proizvode. Gemalto je 
+                                    prodao preko 1.000.000.000 smart kartica u 2013. godini.">
                                     Gemalto je svetski lider i najveći proizvođač kartica u 
                                     Smart Card industriji. PIS d.o.o. je sertifikovani developer, 
                                     integrator i distributer za Gemalto proizvode. Gemalto je 
@@ -170,7 +182,11 @@ and open the template in the editor.
                                 <a href="#">
                                     <img src="img/partners/EDC_logo-300x38.png" alt="Datacard" class="img-partners"/>
                                 </a>
-                                <h6 class="mb-0 lineBefore line-left">
+                                <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="Kompanija PIS d.o.o. je zvanični distributer i partner američke 
+                                    korporacije Entrust Datacard, svetskog lidera u delatnosti izdavanja 
+                                    i izrade identifikacionih kartica. U širokom asortimanu imamo 
+                                    Datacard štampače kartica, softverska rešenja, kompletan repromaterijal, 
+                                    usluge održavanja, servisa i štampanja kartica.">
                                     Kompanija PIS d.o.o. je zvanični distributer i partner američke 
                                     korporacije Entrust Datacard, svetskog lidera u delatnosti izdavanja 
                                     i izrade identifikacionih kartica. U širokom asortimanu imamo 
@@ -184,7 +200,10 @@ and open the template in the editor.
                                 <a href="#">
                                     <img src="img/partners/partneri-Kodak.jpg" alt="Kodak" class="img-partners"/>
                                 </a>
-                                <h6 class="mb-0 lineBefore line-left">
+                                <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="Kompanija PIS d.o.o. je jedini sertifikovani distributer za 
+                                    Kodak Document Imagining program na tržištima Srbije i Crne Gore. 
+                                    Kodak je svetski lider za masovnu obradu podataka i dokumenata 
+                                    sa preko 65% svetskog tržišnog udela.">
                                     Kompanija PIS d.o.o. je jedini sertifikovani distributer za 
                                     Kodak Document Imagining program na tržištima Srbije i Crne Gore. 
                                     Kodak je svetski lider za masovnu obradu podataka i dokumenata 
@@ -195,7 +214,10 @@ and open the template in the editor.
                         <li data-category='#C41FC4'>
                             <div class="slider-item text-left bg-white">
                                 <a href="#">
-                                    <img src="img/partners/partneri-ATIZ.jpg" alt="Atiz" class="img-partners"/>
+                                    <img src="img/partners/partneri-ATIZ.jpg" alt="Atiz" class="img-partners" data-toggle="tooltip" data-placement="bottom" title="BookSnap i BookDrive su skeneri knjiga do A2 formata firme ATIZ, 
+                                    a za kratko vreme su postali svetski hit za digitalizaciju arhivske 
+                                    građe biblioteka, opština, javnih ustanova, itd. PIS d.o.o. je od 2007. 
+                                    godine zastupnik za firmu ATIZ."/>
                                 </a>
                                 <h6 class="mb-0 lineBefore line-left">
                                     BookSnap i BookDrive su skeneri knjiga do A2 formata firme ATIZ, 
@@ -210,7 +232,8 @@ and open the template in the editor.
                                 <a href="#">
                                     <img src="img/partners/Zebra_tech_logo15-300x102.png" alt="Zebra" class="img-partners"/>
                                 </a>
-                                <h6 class="mb-0 lineBefore line-left">
+                                <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="Zebra je tržišni lider u bar-kod i card printer oblasti. 
+                                    Kompanija PIS d.o.o. je Gold partner za Zebra opremu i repromaterijal.">
                                     Zebra je tržišni lider u bar-kod i card printer oblasti. 
                                     Kompanija PIS d.o.o. je Gold partner za Zebra opremu i repromaterijal.
                                 </h6>
@@ -221,7 +244,12 @@ and open the template in the editor.
                                 <a href="#">
                                     <img src="img/partners/OpenText-Logo-239x70.jpg" alt="OpenText" class="img-partners"/>
                                 </a>
-                                <h6 class="mb-0 lineBefore line-left">
+                                <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="OpenText je najveća svetska kompanija za Document Management i 
+                                    Workflow rešenja. Open Text Capture je trižišni lider i de facto 
+                                    standard za capture application software, OCR i ICR prepoznavanje 
+                                    podataka (naloga, čekova, specifikacija čekova, faktura, itd.), 
+                                    povezanost uređaja i obradu skeniranih slika. PIS d.o.o. je distributer 
+                                    rešenja za OpenText i sertifikovani solution provajder za OpenText Capture.">
                                     OpenText je najveća svetska kompanija za Document Management i 
                                     Workflow rešenja. Open Text Capture je trižišni lider i de facto 
                                     standard za capture application software, OCR i ICR prepoznavanje 
@@ -236,7 +264,10 @@ and open the template in the editor.
                                 <a href="#">
                                     <img src="img/partners/arhiviraj.png" alt="Arhiviraj" class="img-partners"/>
                                 </a>
-                                <h6 class="mb-0 lineBefore line-left">
+                                <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="ARHIVIRAJ.COM™ je outsourcing centar kompanije 
+                                    Poslovni Informacioni Sistemi – PIS d.o.o, u 
+                                    kojem se pružaju najsavremenije usluge skeniranja, 
+                                    mikrofilmovanja i arhiviranja dokumentacije.">
                                     ARHIVIRAJ.COM™ je outsourcing centar kompanije 
                                     Poslovni Informacioni Sistemi – PIS d.o.o, u 
                                     kojem se pružaju najsavremenije usluge skeniranja, 
