--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ and open the template in the editor.
                             </h3> 
                             <div class="lead-slider-links text-center">
                                 <a href="#" class="btn-slider">saznaj više</a>
-                                <a href="#" class="btn-slider">kontakt</a>
+                                <a href="#contact" class="btn-slider">kontakt</a>
                             </div>
                         </div>
                     </li>
@@ -112,7 +112,7 @@ and open the template in the editor.
                             </h3> 
                             <div class="lead-slider-links text-center">
                                 <a href="#" class="btn-slider">saznaj više</a>
-                                <a href="#" class="btn-slider">kontakt</a>
+                                <a href="#contact" class="btn-slider">kontakt</a>
                             </div>
                         </div>
                     </li>
@@ -125,7 +125,7 @@ and open the template in the editor.
                             </h3> 
                             <div class="lead-slider-links text-center">
                                 <a href="#" class="btn-slider">saznaj više</a>
-                                <a href="#" class="btn-slider">kontakt</a>
+                                <a href="#contact" class="btn-slider">kontakt</a>
                             </div>
                         </div>
                     </li>
@@ -343,7 +343,7 @@ and open the template in the editor.
                                 <a href="#">o nama</a>
                             </li>
                             <li>
-                                <a href="#">delatnost</a>
+                                <a href="#partners">partneri</a>
                             </li>
                             <li>
                                 <a href="#">brošure</a>
@@ -355,7 +355,7 @@ and open the template in the editor.
                                 <a href="#">reference</a>
                             </li>
                             <li>
-                                <a href="#">kontakt</a>
+                                <a href="#contact">kontakt</a>
                             </li>
                         </ul>
                     </div>
@@ -424,5 +424,9 @@ and open the template in the editor.
 
         <!--All page js-->
         <script src="js/main.js" type="text/javascript"></script>
+
+        <!-- Go to www.addthis.com/dashboard to customize your tools -->
+        <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5c8fa0264c6e6fe3"></script>
+
     </body>
 </html>
