--- a/index.html
+++ b/index.html
@@ -403,7 +403,6 @@ and open the template in the editor.
                             </div>
                         </div>
                     </div>
-
                 </div>
             </section>
         </footer><!--footer end-->
@@ -424,9 +423,10 @@ and open the template in the editor.
 
         <!--All page js-->
         <script src="js/main.js" type="text/javascript"></script>
-
+        
+        <!--Button to TOP-->
+        <a href="#" id="scroll" style="display: none;"><span></span></a>
         <!-- Go to www.addthis.com/dashboard to customize your tools -->
         <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5c8fa0264c6e6fe3"></script>
-
     </body>
 </html>
